force-app/main/default/objects/cgc_sync__Sync_Ignored_Fields__mdt/cgc_sync__Sync_Ignored_Fields__mdt.object-meta.xml
<CustomObject>
    <description>Specifies the fields of SObjects that are ignored during the sync process.</description>
    <label>Sync Ignored Field</label>
    <pluralLabel>Sync Ignored Fields</pluralLabel>
</CustomObject>