force-app/main/default/objects/cgc_sync__Sync_Ignored_Fields__mdt/fields/cgc_sync__Client_App_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_App_Id__c</fullName>
    <label>Client App Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>