force-app/main/default/objects/cgc_sync__Sync_Ignored_Fields__mdt/fields/cgc_sync__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>